Changed to 4 node cluster

--- a/Spark/yarn-cluster/config/spark-defaults.conf
+++ b/Spark/yarn-cluster/config/spark-defaults.conf
@@ -1,4 +1,4 @@
-#spark.master    yarn
+spark.master    yarn
 spark.driver.memory     1g
 spark.executor.memory	1g
 spark.executor.cores	1
@@ -9,5 +9,5 @@ spark.eventLog.enabled true
 spark.eventLog.dir hdfs://hadoop-master:9000/spark-logs
 spark.history.provider org.apache.spark.deploy.history.FsHistoryProvider
 spark.history.fs.logDirectory hdfs://hadoop-master:9000/spark-logs
-spark.history.fs.update.interval 5s
+spark.history.fs.update.interval 2s
 spark.history.ui.port 18080
