--- a/PySpark/Pipfile
+++ b/PySpark/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 pyspark = "==2.4.5"
 mrjob = "==0.7.4"
+pyspark-stubs = "==2.4.0post9"
 
 [requires]
 python_version = "3.6"
