--- a/PySpark/Pipfile
+++ b/PySpark/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 pyspark = "==2.4.5"
 mrjob = "==0.7.4"
 pyspark-stubs = "==2.4.0post9"
+starbase = "==0.3.3"
 
 [requires]
 python_version = "3.6"
