--- a/PySpark/Pipfile
+++ b/PySpark/Pipfile
@@ -8,6 +8,7 @@ pyspark = "==2.4.5"
 mrjob = "==0.7.4"
 pyspark-stubs = "==2.4.0post9"
 starbase = "==0.3.3"
+urllib3=">=1.26.5"
 
 [requires]
 python_version = "3.6"
