Week 2 with Homework

--- a/de-zoomcamp/Pipfile
+++ b/de-zoomcamp/Pipfile
@@ -8,6 +8,8 @@ sqlalchemy = "*"
 psycopg2-binary = "*"
 jupyter = "*"
 pandas = "*"
+pyarrow = "*"
+apache-airflow-providers-google = "*"
 
 [dev-packages]
 
